--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-persist": "^3.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-giphy-select": "^1.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "superagent": "^3.8.3"
@@ -15,5 +17,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy" : "http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
