Refactor remote gradle tasks

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,19 @@ ssh.settings {
     knownHosts = allowAnyHosts
 }
 
+
+task remotePull {
+    doLast {
+        ssh.run {
+            session(remotes.webServer) {
+                println("${execute 'cd ~/workspace/raspipi && git reset --hard && git pull'}")
+            }
+        }
+    }
+}
+
 task remoteInstall {
+    dependsOn remotePull
     doLast {
         ssh.run {
             session(remotes.webServer) {
@@ -25,11 +37,10 @@ task remoteInstall {
 }
 
 task remoteDeploy {
+    dependsOn remotePull
     doLast {
         ssh.run {
             session(remotes.webServer) {
-                println("${execute 'cd ~/workspace/raspipi && git reset --hard'}")
-                println("${execute 'cd ~/workspace/raspipi && git pull'}")
                 println("${execute 'sudo systemctl restart raspipi-server.service'}")
                 println("${execute 'sudo systemctl restart raspipi-frontend.service'}")
             }
