--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-giphy-select": "^1.0.3",
+    "react-intl": "^2.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "superagent": "^3.8.3"
