--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jsdom": "^12.0.0",
     "node-persist": "^3.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
