--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
